Adicionei um favicon

--- a/desafios/desafio-ellie/Login.html
+++ b/desafios/desafio-ellie/Login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/favicon (2).ico" type="image/x-icon">
     <title>Login</title>
     <style>
 
@@ -57,6 +58,6 @@
     <h1>Oi Sobrevivente!</h1>
     <p>Infelizmente essa aba não está disponível, <br>
     é apenas um teste.Que pena :c </p>
-    <p><a href="ellie.html">Clique aqui para voltar</a></p>
+    <p><a href="index.html">Clique aqui para voltar</a></p>
 </body>
 </html>
