--- a/desafios/desafio-ellie/index.html
+++ b/desafios/desafio-ellie/index.html
@@ -7,7 +7,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
-    <link rel="shortcut icon" href="../desafio-ellie/imagens/favicon2.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/favicon2.ico" type="image/x-icon">
 
     <title>Site The Last Of Us project</title>
 </head>
