novos arquivos criados

--- a/exercícios/ex022/fundo001.html
+++ b/exercícios/ex022/fundo001.html
@@ -17,6 +17,7 @@
               display: inline-block;
               width: 300px;
               height: 300px;
+              margin: 0px 6px;
         }
                 
         div#q1{                      /*Cor normal*/
